<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/birth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/pet_birth_date_label"
        android:textStyle="bold" />

    <TextView
        android:layout_toRightOf="@+id/birth_label"
        android:id="@+id/pet_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_toEndOf="@+id/birth_label" />

    <TextView
        android:id="@+id/race_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birth_label"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/race_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/race"
        android:layout_below="@+id/birth_label"
        android:layout_toRightOf="@+id/race_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_toEndOf="@+id/race_label" />

    <TextView
        android:id="@+id/species_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_label"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/species_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/species"
        android:layout_below="@+id/race_label"
        android:layout_toRightOf="@+id/species_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_toEndOf="@+id/species_label" />

    <TextView
        android:id="@+id/chip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/species_label"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/chip_number_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chip_number"
        android:layout_toRightOf="@+id/chip_label"
        android:layout_below="@+id/species_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_toEndOf="@+id/chip_label" />

</RelativeLayout>