<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">


    <TextView
        android:id="@+id/name"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_toLeftOf="@+id/expand"
        android:layout_toStartOf="@+id/expand"
        android:textAlignment="center"
        android:textSize="@dimen/title_size" />

    <Button
        android:id="@+id/expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/expand"
        android:textSize="@dimen/title_size"
        android:layout_alignParentRight="true" />

    <mobile.hospetall.ps.isel.hospetallmobile.view.ExtendedRelativeLayout
        android:id="@+id/pet_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/birth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/pet_birth_date_label"
            android:textStyle="bold" />

        <TextView
            android:layout_toRightOf="@+id/birth_label"
            android:id="@+id/pet_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_toEndOf="@+id/birth_label" />

        <TextView
            android:id="@+id/race_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/birth_label"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/race_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/race"
            android:layout_below="@+id/birth_label"
            android:layout_toRightOf="@+id/race_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_toEndOf="@+id/race_label" />

        <TextView
            android:id="@+id/species_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/race_label"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/species_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/species"
            android:layout_below="@+id/race_label"
            android:layout_toRightOf="@+id/species_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_toEndOf="@+id/species_label" />

        <TextView
            android:id="@+id/chip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/species_label"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/chip_number_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chip_number"
            android:layout_toRightOf="@+id/chip_label"
            android:layout_below="@+id/species_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_toEndOf="@+id/chip_label" />

        <Button
            android:id="@+id/consultation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chip_label"
            android:text="@string/consultation" />

        <Button
            android:id="@+id/treatment_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chip_label"
            android:layout_alignParentEnd="true"
            android:text="@string/treatment"
            android:layout_alignParentRight="true" />
    </mobile.hospetall.ps.isel.hospetallmobile.view.ExtendedRelativeLayout>


</RelativeLayout>